# docstr

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: a.rs  test.rs
tests/ui/: empty.rs  empty.stderr  incomplete.rs  incomplete.stderr  inner.rs  inner.stderr  invalid.rs  invalid.stderr  wrong_punct.rs  wrong_punct.stderr
