[package]
name = "docstr"
version = "0.4.2"
edition = "2021"
description = "Ergonomic multi-line string literals"
rust-version = "1.56"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/docstr"
keywords = ["heredoc", "multiline", "string", "literal", "indoc"]
categories = ["data-structures", "text-processing", "no-std", "no-std::no-alloc"]
license = "MIT OR Apache-2.0"

[dependencies]
# std does not provide a way for us to get content of the `proc_macro::Literal`
litrs = "0.5"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"
